# nori

./: .gitignore  CLAUDE.md  DOCUMENT-INDEX.md  GAP-ANALYSIS.md  INSTANT-SETUP.bat  MASTER-ROADMAP.md  MISSION-ACCOMPLISHED.md  NEXT-SESSION-QUICK-START.md  QUICK-START-TOMORROW.md  README.md  SETUP-FIX.md  START-HERE.md  agents-comparison.md  bunfig.toml  claude-code-architecture-guide.md  claude-code-wrapper-development-guide.md  commands-comparison.md  context-management-comparison.md  hooks-comparison.md  package.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.nori/: settings.json
.serena/: project.yml
app/: .gitignore  MIGRATION.md  README.md  electron-builder.yml  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
docs/: IMPLEMENTATION-PLAN.md  PROJECT-SUMMARY.md  (+6 more)
nori-app/src-tauri/: Cargo.toml  tauri.conf.json
nori-app/src-tauri/icons/: README.md  generate-ico.cjs  generate-ico.mjs
nori-app/src-tauri/src/: db.rs  lib.rs  main.rs  role.rs  session.rs
nori-app/src-tauri/src/auth/: README.md  commands.rs  mod.rs  oauth.rs  oauth_commands.rs  oauth_flow.rs
nori-app/src-tauri/src/claude/: commands.rs  mod.rs
nori-app/src-tauri/src/hooks/: commands.rs  executor.rs  mod.rs
nori-app/src-tauri/src/knowledge/: commands.rs  mod.rs  parser.rs  search.rs
nori-app/src-tauri/src/projects/: commands.rs  mod.rs  types.rs
nori-app/src-tauri/src/vaults/: commands.rs  types.rs
nori-app/src-tauri/src/workspaces/: commands.rs  types.rs
(+685 files in other folders)
