[package]
name = "nori"
version = "0.1.0"
description = "Desktop AI assistant with role-based personalities and knowledge management"
authors = ["you"]
edition = "2021"

[lib]
name = "nori_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6.0"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2.5"
regex = "1.11"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
reqwest = { version = "0.13.1", features = ["json", "stream", "native-tls"] }
chrono = "0.4"
wait-timeout = "0.2"
tauri-plugin-dialog = "2.4.2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"

[dev-dependencies]
tempfile = "3.8"
